force-app/main/default/objects/COMM_DynatraceEvent__e/COMM_DynatraceEvent__e.object-meta.xml
<CustomObject>
    <label>Dynatrace Event</label>
    <pluralLabel>Dynatrace Events</pluralLabel>
</CustomObject>