force-app/main/default/objects/COMM_DynatraceEvent__e/fields/COMM_Details__c.field-meta.xml
<CustomField>
    <fullName>COMM_Details__c</fullName>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>