force-app/main/default/objects/COMM_DynatraceEvent__e/fields/COMM_EventReferenceId__c.field-meta.xml
<CustomField>
    <fullName>COMM_EventReferenceId__c</fullName>
    <label>EventReferenceId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>