force-app/main/default/objects/COMM_DynatraceEvent__e/fields/COMM_EventType__c.field-meta.xml
<CustomField>
    <fullName>COMM_EventType__c</fullName>
    <label>EventType</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>