force-app/main/default/objects/COMM_DynatraceEvent__e/fields/COMM_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>COMM_Timestamp__c</fullName>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>